fix: resolve application setup and configuration errors

--- a/src/locales/langs/ar/common.json
+++ b/src/locales/langs/ar/common.json
@@ -1,6 +1,12 @@
 {
-  "demo": {
-    "lang": "Arabic",
-    "description": "نقطة البداية لمشروعك التالي مستندة إلى MUI. التخصيص السهل يساعدك على بناء التطبيقات بشكل أسرع وأفضل."
+  "hero": {
+    "title": "الحوكمة العالمية اللامركزية للأصول",
+    "title_highlight": "الحقيقية (RWA)",
+    "subtitle": "الجسر النهائي بين العالم المادي ونظام العالم الرقمي.",
+    "description": "تجمع ASPPIBRA-DAO بين الامتثال القانوني وBlockchain والذكاء الاصطناعي لتحويل الممتلكات المادية إلى أصول عالية الكفاءة التشغيلية وسيولة، تتم إدارتها بشكل لامركزي مع أمان مؤسسي كامل.",
+    "buttons": {
+      "access": "النظام البيئي",
+      "whitepaper": "ورقة بيضاء"
+    }
   }
 }
