--- a/src/locales/langs/fr/common.json
+++ b/src/locales/langs/fr/common.json
@@ -1,6 +1,12 @@
 {
-  "demo": {
-    "lang": "France",
-    "description": "Le point de départ pour votre prochain projet est basé sur MUI. La personnalisation facile vous aide à construire des applications plus rapidement et mieux."
+  "hero": {
+    "title": "Gouvernance Mondiale Décentralisée des",
+    "title_highlight": "Actifs du Monde Réel (RWA)",
+    "subtitle": "Le pont définitif entre le Monde Physique et l'Écosystème Mundo Digital.",
+    "description": "ASPPIBRA-DAO intègre la conformité juridique, la Blockchain et l'IA pour transformer des propriétés physiques en actifs à haute efficacité opérationnelle et liquidité, gérés de manière décentralisée avec une sécurité institutionnelle totale.",
+    "buttons": {
+      "access": "Écosystème",
+      "whitepaper": "Livre Blanc"
+    }
   }
 }
