--- a/src/locales/langs/pt/common.json
+++ b/src/locales/langs/pt/common.json
@@ -1,6 +1,12 @@
 {
-  "demo": {
-    "lang": "Portuguese",
-    "description": "The starting point for your next project is based on MUI. Easy customization helps you build apps faster and better."
+  "hero": {
+    "title": "Governança Global Descentralizada sobre",
+    "title_highlight": "Ativos do Mundo Real (RWA)",
+    "subtitle": "A ponte definitiva entre o Mundo Físico e o Ecossistema Mundo Digital.",
+    "description": "A ASPPIBRA-DAO integra conformidade jurídica, Blockchain e IA para converter propriedades físicas em ativos de alta eficiência operacional e liquidez, administrados de forma descentralizada com total segurança institucional.",
+    "buttons": {
+      "access": "Ecossistema",
+      "whitepaper": "Whitepaper"
+    }
   }
 }
