feat(i18n): Implementa e audita a seção Ecossistema e corrige bug de renderização
- Adiciona o novo componente da seção 'Ecossistema' à página inicial, com conteúdo dinâmico e internacionalizado para 7 idiomas.

- Realiza a auditoria completa e a correção dos arquivos de tradução (JSON) para Português, Inglês, Espanhol, Árabe, Chinês, Francês e Russo, garantindo consistência e qualidade na terminologia.

- Corrige um bug crítico de renderização no React, onde os cards da seção desapareciam ao trocar o idioma. A solução envolveu a substituição da 'key' de um título traduzido por um 'id' estático e único para cada item, garantindo a persistência do componente durante as atualizações de estado.

- Resolve erros de linting relacionados à ordenação de importações no componente .

--- a/src/locales/langs/ar/common.json
+++ b/src/locales/langs/ar/common.json
@@ -8,5 +8,30 @@
       "access": "النظام البيئي",
       "whitepaper": "ورقة بيضاء"
     }
+  },
+  "ecosystem": {
+    "caption": "بنية تحتية رفيعة المستوى",
+    "title": "هندسة البنية التحتية من أجل",
+    "title_highlight": "النطاق العالمي للأصول الحقيقية (RWA)",
+    "description": "تعمل ASPPIBRA-DAO كمسرع مؤسسي عالي الأداء، حيث تدمج أصول القيمة الاستراتيجية في نظام الأصول الحقيقية العالمي. نحن نوفر الهندسة القانونية والمتانة التكنولوجية اللازمة لتطوير والتحقق من ونمو الاقتصاد الحقيقي تحت وصاية لامركزية.",
+    "cta": "استكشف الأصول",
+    "items": {
+      "reurb": {
+        "title": "السيادة والحوكمة العقارية المؤسسية",
+        "description": "ترسيخ الشرعية القانونية للأصول العقارية المعقدة، وترقيتها إلى المعايير المؤسسية الصارمة المطلوبة للتكامل السيادي في أسواق رأس المال الرقمية العالمية."
+      },
+      "agro": {
+        "title": "التسريع الاستراتيجي للصناعات الزراعية",
+        "description": "ربط سلاسل الإنتاج المتميزة بأنظمة الائتمان المتقدمة عبر البلوكشين ونماذج الحوكمة المستدامة، مما يحسن القيمة الجوهرية للإنتاج واسع النطاق."
+      },
+      "defi": {
+        "title": "بروتوكولات السيولة والنطاق النظامي",
+        "description": "توسيع كفاءة رأس المال من خلال ربط الأصول الحقيقية مباشرة بتدفقات السيولة العالمية اللامركزية، مما يلغي العقبات اللوجستية ويعظم الأداء المالي."
+      },
+      "governance": {
+        "title": "التقييم والحوكمة السيادية",
+        "description": "تمنح رمز الحوكمة سلطة التقييم الاستراتيجي على الشبكة. شارك في قرارات الحوكمة رفيعة المستوى ووجه احتضان الأصول المؤسسية من الجيل القادم."
+      }
+    }
   }
 }
