--- a/src/locales/langs/cn/common.json
+++ b/src/locales/langs/cn/common.json
@@ -8,5 +8,30 @@
       "access": "生态系统",
       "whitepaper": "白皮书"
     }
+  },
+  "ecosystem": {
+    "caption": "高级基础设施",
+    "title": "基础设施工程实现",
+    "title_highlight": "全球现实世界资产 (RWA) 规模化",
+    "description": "ASPPIBRA-DAO 是一家高性能机构加速器，旨在将具有战略价值的资产整合到全球 RWA 生态系统中。我们提供法律架构和技术实力，在去中心化托管下实现实体经济的复杂化、验证和规模化。",
+    "cta": "探索资产",
+    "items": {
+      "reurb": {
+        "title": "主权资产与地产治理",
+        "description": "确立复杂地产资产的绝对法律合法性，将其提升至机构标准，实现与全球数字资本市场的主权集成。"
+      },
+      "agro": {
+        "title": "战略性农工业加速",
+        "description": "将精英生产链连接到先进的链上信贷系统和可持续治理模型，优化大规模产出的内在价值。"
+      },
+      "defi": {
+        "title": "流动性与系统性规模协议",
+        "description": "通过将现实资产直接与去中心化全球流动性流挂钩，扩大资本效率，消除物流摩擦并最大化财务绩效。"
+      },
+      "governance": {
+        "title": "主权治理与战略策展",
+        "description": "治理代币授予对网络的战略策展权。参与高级别治理决策，引导下一代机构资产的孵化。"
+      }
+    }
   }
 }
