--- a/src/locales/langs/ru/common.json
+++ b/src/locales/langs/ru/common.json
@@ -8,5 +8,30 @@
       "access": "Экосистема",
       "whitepaper": "Whitepaper"
     }
+  },
+  "ecosystem": {
+    "caption": "Высокоуровневая инфраструктура",
+    "title": "Инженерная инфраструктура для",
+    "title_highlight": "глобального масштабирования реальных активов (RWA)",
+    "description": "ASPPIBRA-DAO выступает в качестве высокопроизводительного институционального акселератора, интегрирующего стратегически важные активы в глобальную экосистему RWA. Мы обеспечиваем юридическую архитектуру и технологическую надежность, необходимые для легализации, проверки и масштабирования реальной экономики под децентрализованным управлением.",
+    "cta": "Изучить активы",
+    "items": {
+      "reurb": {
+        "title": "Суверенное управление активами и имуществом",
+        "description": "Обеспечение юридической легитимности сложных земельных активов и их приведение к строгим институциональным стандартам для суверенной интеграции в глобальные цифровые рынки капитала."
+      },
+      "agro": {
+        "title": "Стратегическая агропромышленная акселерация",
+        "description": "Соединение элитных производственных цепочек с передовыми кредитными системами on-chain и моделями устойчивого управления для оптимизации внутренней стоимости крупномасштабного производства."
+      },
+      "defi": {
+        "title": "Протоколы ликвидности и системного масштабирования",
+        "description": "Повышение эффективности капитала путем прямой привязки реальных активов к глобальным потокам децентрализованной ликвидности, устранение логистических барьеров и максимизация финансовых показателей."
+      },
+      "governance": {
+        "title": "Суверенное управление и стратегическое кураторство",
+        "description": "Токен управления дает право стратегического кураторства над сетью. Участвуйте в принятии решений на высшем уровне управления и направляйте инкубацию институциональных активов нового поколения."
+      }
+    }
   }
 }
