feat(i18n): add infrastructure section

--- a/src/locales/langs/ar/common.json
+++ b/src/locales/langs/ar/common.json
@@ -33,5 +33,12 @@
         "description": "تمنح رمز الحوكمة سلطة التقييم الاستراتيجي على الشبكة. شارك في قرارات الحوكمة رفيعة المستوى ووجه احتضان الأصول المؤسسية من الجيل القادم."
       }
     }
+  },
+  "infrastructure": {
+    "caption": "상호 운용성 상호",
+    "title": "الهندسة التقنية و",
+    "title_highlight": "الاتصال عالي الأداء",
+    "description": "تدمج بنيتنا التحتية بين الأمان التشفيري من الجيل القادم ورشاقة الحوسبة الطرفية (Edge Computing). نحن نضمن أن تظل الحيازة السيادية لأصول RWA وسلامة اعتماد CAD متاحة دائمًا وقابلة للتدقيق ومرنة.",
+    "footer": "* تشفير بمعايير حكومية وثبات مضمون على البلوكشين."
   }
 }
