--- a/src/locales/langs/cn/common.json
+++ b/src/locales/langs/cn/common.json
@@ -33,5 +33,12 @@
         "description": "治理代币授予对网络的战略策展权。参与高级别治理决策，引导下一代机构资产的孵化。"
       }
     }
+  },
+  "infrastructure": {
+    "caption": "全球互操作性",
+    "title": "技术架构与",
+    "title_highlight": "高性能连接",
+    "description": "我们的基础设施将次世代加密安全与边缘计算 (Edge Computing) 的敏捷性深度融合。我们确保现实世界资产 (RWA) 的主权托管与 CAD 凭证的完整性始终可用、可审计且具有强韧性。",
+    "footer": "* 政府级加密技术与链上不可篡改性保证。"
   }
 }
