--- a/src/locales/langs/ru/common.json
+++ b/src/locales/langs/ru/common.json
@@ -33,5 +33,12 @@
         "description": "Токен управления дает право стратегического кураторства над сетью. Участвуйте в принятии решений на высшем уровне управления и направляйте инкубацию институциональных активов нового поколения."
       }
     }
+  },
+  "infrastructure": {
+    "caption": "Глобальная операционная совместимость",
+    "title": "Техническая архитектура и",
+    "title_highlight": "Высокопроизводительная связность",
+    "description": "Наша инфраструктура объединяет криптографическую безопасность нового поколения с гибкостью пограничных вычислений (Edge Computing). Мы гарантируем, что суверенное хранение активов RWA и целостность учетных данных CAD всегда будут доступны, проверяемы и отказоустойчивы.",
+    "footer": "* Шифрование правительственного уровня и гарантированная неизменяемость данных в сети."
   }
 }
