fix(i18n): Resolve bug de renderização em HomeCommunity
Corrige um bug complexo no componente `HomeCommunity` onde as estatísticas de tração (Membros, Hectares) desapareciam ao trocar de idioma.

A causa raiz era a re-renderização do componente acionando indevidamente as animações da `framer-motion` devido a `keys` instáveis e à estrutura dos componentes.

A solução envolveu:
1. Adicionar `id`s estáticos aos itens da lista de métricas para fornecer uma `key` estável ao React.
2. Refatorar a aplicação da animação, movendo-a para o componente `Grid` do MUI para estabilizar a relação entre o item e a animação.
3. Centralizar os valores numéricos (`+500`, `+10k`) nos arquivos de tradução `common.json` para uma fonte única de verdade.

--- a/src/locales/langs/ar/common.json
+++ b/src/locales/langs/ar/common.json
@@ -40,5 +40,27 @@
     "title_highlight": "الاتصال عالي الأداء",
     "description": "تدمج بنيتنا التحتية بين الأمان التشفيري من الجيل القادم ورشاقة الحوسبة الطرفية (Edge Computing). نحن نضمن أن تظل الحيازة السيادية لأصول RWA وسلامة اعتماد CAD متاحة دائمًا وقابلة للتدقيق ومرنة.",
     "footer": "* تشفير بمعايير حكومية وثبات مضمون على البلوكشين."
+  },
+  "traction": {
+    "caption": "الزخم المؤسسي",
+    "title": "إمكانات السوق و",
+    "title_highlight": "القابلية للتوسع النظامي",
+    "description": "نعمل على ترسيخ مقاييس صلبة تعكس قدرتنا على التوسع العالمي. توفر ASPPIBRA-DAO البنية التحتية لإدارة الأصول عالية القيمة بأمان قانوني مطلق وسيولة لامركزية.",
+    "stats": {
+      "members": "قادة الحوكمة",
+      "members_value": "+500",
+      "area": "هكتار تحت الإدارة",
+      "area_value": "+10k",
+      "aum": "أصول تحت السيادة",
+      "aum_value": "$7.5M"
+    },
+    "card": {
+      "title": "التآزر الشبكي",
+      "content": "تدمج حوكمتنا اللامركزية الشركات والتعاونيات في نظام سيولة عالمي، وتتغلب على العوائق التكنولوجية من خلال إدارة قابلة للتدقيق."
+    },
+    "buttons": {
+      "join": "الوصول إلى الحوكمة",
+      "data": "بيانات البلوكشين"
+    }
   }
 }
