--- a/src/locales/langs/ru/common.json
+++ b/src/locales/langs/ru/common.json
@@ -40,5 +40,27 @@
     "title_highlight": "Высокопроизводительная связность",
     "description": "Наша инфраструктура объединяет криптографическую безопасность нового поколения с гибкостью пограничных вычислений (Edge Computing). Мы гарантируем, что суверенное хранение активов RWA и целостность учетных данных CAD всегда будут доступны, проверяемы и отказоустойчивы.",
     "footer": "* Шифрование правительственного уровня и гарантированная неизменяемость данных в сети."
+  },
+  "traction": {
+    "caption": "Институциональное Привлечение",
+    "title": "Рыночный Потенциал и",
+    "title_highlight": "Системная Масштабируемость",
+    "description": "Мы консолидируем надежные метрики, отражающие нашу способность к глобальному масштабированию. ASPPIBRA-DAO предоставляет инфраструктуру для управления высокоценными активами с абсолютной юридической безопасностью и децентрализованной ликвидностью.",
+    "stats": {
+      "members": "Стюарды сети",
+      "members_value": "+500",
+      "area": "Гектаров под управлением",
+      "area_value": "+10k",
+      "aum": "Активы под суверенитетом",
+      "aum_value": "$7.5M"
+    },
+    "card": {
+      "title": "Сетевая Синергия",
+      "content": "Наше децентрализованное управление интегрирует корпорации и кооперативы в глобальную экосистему ликвидности, преодолевая технологические барьеры с помощью проверяемого управления."
+    },
+    "buttons": {
+      "join": "Доступ к Управлению",
+      "data": "Данные в Сети"
+    }
   }
 }
