fix(i18n): Internacionaliza a seção de Infraestrutura
Refatora o componente `HomeIntegrations` para utilizar o hook `useTranslate`, removendo o texto hardcoded e permitindo a tradução dinâmica do conteúdo.

Adiciona as chaves de tradução e seus respectivos valores para a seção de Infraestrutura em todos os idiomas suportados (en, pt, es, ru), garantindo que a interface do usuário responda corretamente às mudanças de localidade.

Esta correção resolve o bug onde o texto da seção permanecia estático, não refletindo o idioma selecionado pelo usuário.

--- a/src/locales/langs/en/common.json
+++ b/src/locales/langs/en/common.json
@@ -35,11 +35,11 @@
     }
   },
   "infrastructure": {
-    "caption": "Global Interoperability",
-    "title": "Technical Architecture &",
-    "title_highlight": "High-Performance Connectivity",
-    "description": "Our infrastructure merges next-generation cryptographic security with the agility of Edge Computing. We ensure that sovereign RWA asset custody and CAD Credential integrity remain permanently available, auditable, and resilient.",
-    "footer": "* Government-grade encryption and guaranteed on-chain immutability."
+    "caption": "Infrastructure",
+    "title": "Global Connectivity &",
+    "title_highlight": "Cutting-Edge Infrastructure",
+    "description": "Our infrastructure combines the most secure layers of Web3 with the performance of Edge Computing. We ensure that RWA asset management and your CAD Credential are always available and auditable.",
+    "footnote": "* Government-grade encryption and guaranteed on-chain immutability."
   },
   "traction": {
     "caption": "Institutional Traction",
