--- a/src/locales/langs/ru/common.json
+++ b/src/locales/langs/ru/common.json
@@ -35,11 +35,11 @@
     }
   },
   "infrastructure": {
-    "caption": "Глобальная операционная совместимость",
-    "title": "Техническая архитектура и",
-    "title_highlight": "Высокопроизводительная связность",
-    "description": "Наша инфраструктура объединяет криптографическую безопасность нового поколения с гибкостью пограничных вычислений (Edge Computing). Мы гарантируем, что суверенное хранение активов RWA и целостность учетных данных CAD всегда будут доступны, проверяемы и отказоустойчивы.",
-    "footer": "* Шифрование правительственного уровня и гарантированная неизменяемость данных в сети."
+    "caption": "Инфраструктура",
+    "title": "Глобальная связь и",
+    "title_highlight": "Передовая инфраструктура",
+    "description": "Наша инфраструктура объединяет самые безопасные уровни Web3 с производительностью пограничных вычислений (Edge Computing). Мы гарантируем, что управление активами RWA и ваша Учетная Запись CAD всегда доступны и поддаются аудиту.",
+    "footnote": "* Шифрование государственного уровня и гарантированная неизменность в блокчейне."
   },
   "traction": {
     "caption": "Институциональное Привлечение",
